# Cookie-Engine-2D

./: .clang-format  .gitignore  CMakeLists.txt  Cookie.sln  README.md  premake5.lua
source/Cookie_Engine/code/: CMakeLists.txt
source/Cookie_Engine/code/Engine/: Ckpch.h  CookieEngine.h  EntryPoint.cpp
source/Cookie_Engine/code/Engine/Core/: Application.cpp  Application.h  Asserts.h  BasicTypes.h  Common.h  Core_API.h  Defines.h  FileSystem.cpp  FileSystem.h  FileSystemTest.h  InputSystem.cpp  Logging.cpp  Logging.h  Math.h  Time.h
source/Cookie_Engine/code/Engine/Core/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystemTest.h
source/Cookie_Engine/code/Engine/Core/IMGUI/: IMGUI_Impl.cpp  IMGUI_Impl.h
source/Cookie_Engine/code/Engine/Core/InputSystem/: InputSystem.cpp  InputSystem.h  KeyCodes.h
source/Cookie_Engine/code/Engine/Core/Logging/: Log.cpp  Log.h  Logging.cpp  Logging.h
source/Cookie_Engine/code/Engine/Core/Platform/: Platform.cpp  Platform.h  Window.cpp  Window.h
source/Cookie_Engine/code/Engine/Core/Random/: Random.cpp  Random.h
source/Cookie_Engine/code/Engine/Core/RenderAPI/: RenderAPI.cpp  RenderAPI.h
source/Cookie_Engine/code/Engine/Core/RenderingAPI/: RenderingAPI.cpp  RenderingAPI.h
source/Cookie_Engine/code/Engine/Core/RenderingSystem/: RenderingAPI.cpp  RenderingAPI.h  RenderingSystem.cpp  RenderingSystem.h
source/Cookie_Engine/code/Engine/Core/Types/: Containers.h  Function.h  Pointers.h  PrimitiveTypes.h  String.h
source/Cookie_Engine/code/Engine/Entities/: Common.h  ComponentArray.h  Entities_API.h  EntityAdmin.h
source/Cookie_Engine/code/Engine/EntityObjectModel/: BaseComponents.h  CookiesTest.h  EntityAdmin.cpp  EntityAdmin.h
source/Cookie_Engine/code/Engine/Render/: RenderingSystem.cpp
source/Cookie_Engine/code/Engine/Resources/: Resources.cpp  Resources.h
source/Test_Game/: CMakeLists.txt  Systems.h  game.cpp
source/code/CookieBoids/: CookieBoids.vcxproj  EngineLog.txt  Game.cpp  Systems.h
source/code/CookieEngine/: CookieEngine.vcxproj  CookieEngine.vcxproj.filters  premake5.lua
source/code/CookieEngine/Engine/Core/: Application.cpp  Application.h  Core_API.h  Defines.h  Game.h  Math.h  Time.h  Window.h
source/code/CookieEngine/Engine/Core/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystemTest.h
source/code/CookieEngine/Engine/Core/IMGUI/: IMGUI_Impl.cpp
source/code/CookieEngine/Engine/Core/InputSystem/: InputSystem.cpp  InputSystem.h
source/code/CookieEngine/Engine/Core/Logging/: Log.cpp  Log.h
source/code/CookieEngine/Engine/Core/Platform/: Platform.cpp  Platform.h  Window.cpp  Window.h
source/code/CookieEngine/Engine/Core/Random/: Random.h
source/code/CookieEngine/Engine/Core/RenderAPI/: RenderAPI.cpp  RenderAPI.h
source/code/CookieEngine/Engine/Core/Time/: Time.cpp  Time.h
source/code/CookieEngine/Engine/Entities/: BaseComponents.h  Common.h  ComponentArray.h  EntityAdmin.cpp  EntityAdmin.h  System.h
source/code/CookieEngine/Engine/Entities/Components/: CameraComponent.h  PhysicsComponent.h  TransformComponent.h
source/code/CookieEngine/Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
source/code/CookieEngine/Engine/Render/: RenderAPI.cpp  RenderAPI.h  RenderingSystem.cpp  RenderingSystem.h
source/code/CookieEngine/Engine/Resources/: Resources.cpp  Resources.h
source/code/CookieGame/: Components.h  CookieGame.vcxproj  Game.cpp  Systems.h  premake5.lua
source/code/CookiePhysics/: Game.cpp  Systems.h
source/code/CookieSurvival/: Components.h  CookieSurvival.vcxproj  Game.cpp  Systems.h
