# Test Game
set(TestGame "Test_Game")

file(GLOB_RECURSE TestGame_Source
    "*.cpp"
    "*.h"
)

add_executable(${TestGame} ${TestGame_Source})

# Set target directories
set_target_properties(${TestGame} PROPERTIES
	OUTPUT_NAME "Test_Game"

	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${BUILD_DIR_DEBUG}TestGame
	LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BUILD_DIR_DEBUG}TestGame
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_DIR_DEBUG}TestGame
	
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${BUILD_DIR_RELEASE}TestGame
	LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BUILD_DIR_RELEASE}TestGame
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_DIR_RELEASE}TestGame
	
	ARCHIVE_OUTPUT_DIRECTORY_DIST ${BUILD_DIR_DIST}TestGame
	LIBRARY_OUTPUT_DIRECTORY_DIST ${BUILD_DIR_DIST}TestGame
	RUNTIME_OUTPUT_DIRECTORY_DIST ${BUILD_DIR_DIST}TestGame
	)

# Dependencies
target_link_libraries(${TestGame} PRIVATE Cookie_Engine)

# Defines
target_compile_definitions(${TestGame} PRIVATE
	COOKIE_PLATFORM_WINDOWS)